Update hyprland.conf for adding internet function

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -246,3 +246,11 @@ bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called pla
 bindl=, XF86AudioNext, exec, playerctl next 
 bindl=, XF86AudioPrev, exec, playerctl previous
 
+#ADDING INTERNET TAB FOR HYPRLAND TO DISPLAY INTERNET SPEED
+
+
+#defining internet speed check function
+internet_speed {
+    output = (exec_result, 60);
+    exec = "speedtest-cli --simple | grep Download | cut -d ' ' -f 2";
+}
