--- a/hyprland.conf
+++ b/hyprland.conf
@@ -75,7 +75,7 @@ general {
 
 misc {
     enable_swallow = true
-    swallow_regex = '^(kitty)$'
+    swallow_regex = ^(kitty)$
     disable_hyprland_logo = true
 }
 
